# dcrypt

./: .gitignore  CHANGELOG.md  CONSTANT_TIME_POLICY.md  Cargo.toml  DOCS.md  README.md  cargo_snapshot.md  changes.txt  codebase_snapshot.md  differences.txt  output.txt  regen_argon2_vectors.py  release-dcrypt.sh  tree.md  verify-publish-ready.sh
crates/algorithms/: Cargo.toml
crates/algorithms/benches/: README.md  aes.rs  aes_gcm.rs  argon2.rs  b283k.rs  chacha20_poly1305.rs  k256.rs  ntt.rs  p256.rs  p384.rs  p521.rs  sha2.rs  xchacha20_poly1305.rs
crates/algorithms/examples/: no_std_usage.rs  primitives_basic_usage.rs  type_system.rs
crates/algorithms/src/: lib.rs
crates/algorithms/src/aead/: mod.rs
crates/algorithms/src/block/: mod.rs
crates/algorithms/src/code/: mod.rs  sparse_matrix.rs
crates/algorithms/src/ec/: mod.rs
crates/algorithms/src/error/: mod.rs  tests.rs  validate.rs
crates/algorithms/src/hash/: mod.rs
crates/algorithms/src/kdf/: common.rs  mod.rs  params.rs
crates/algorithms/src/lattice/: mod.rs
crates/algorithms/src/mac/: mod.rs
crates/algorithms/src/mq/: gf256.rs  mod.rs  quadratic.rs  solve.rs
crates/algorithms/src/operation/: kdf.rs  mod.rs
crates/algorithms/src/poly/: mod.rs  ntt.rs  params.rs  polynomial.rs  sampling.rs  serialize.rs
crates/algorithms/src/stream/: mod.rs
crates/algorithms/src/types/: algorithms.rs  digest.rs  key.rs  mod.rs  nonce.rs  salt.rs  sealed.rs  tag.rs
crates/algorithms/src/xof/: mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  types.rs
crates/api/src/error/: mod.rs  registry.rs  traits.rs  types.rs  validate.rs
crates/api/src/traits/: kem.rs  mod.rs  pke.rs  serialize.rs  signature.rs  symmetric.rs
crates/hybrid/: Cargo.toml
crates/hybrid/src/: lib.rs
crates/hybrid/src/kem/: ecdh_k256_kyber_512.rs  ecdh_kyber.rs  ecdh_ntru.rs  ecdh_p256_kyber_512.rs  ecdh_p256_kyber_768.rs  ecdh_p384_kyber_1024.rs  ecdh_p521_kyber_1024.rs  engine.rs  mod.rs  rsa_kyber.rs  tests.rs  traits.rs
crates/hybrid/src/sign/: ecdsa_dilithium.rs  mod.rs  rsa_falcon.rs
crates/internal/: Cargo.toml
crates/internal/src/: constant_time.rs  endian.rs  lib.rs  mod.rs  zeroing.rs
crates/kem/: Cargo.toml
crates/kem/benches/: ecdh_b283k.rs  ecdh_comparison.rs  ecdh_k256.rs  ecdh_p192.rs  ecdh_p224.rs  ecdh_p256.rs  ecdh_p384.rs  ecdh_p521.rs  kyber.rs
crates/kem/src/: lib.rs
crates/kem/src/dh/: mod.rs
crates/kem/src/ecdh/: mod.rs
crates/kem/src/error/: mod.rs  validate.rs
crates/kem/src/kyber/: common.rs  cpa_pke.rs  ind_cca.rs  kem.rs  kyber1024.rs  kyber512.rs  kyber768.rs  mod.rs  params.rs  polyvec.rs  serialize.rs  tests.rs
crates/kem/src/mceliece/: mod.rs
crates/kem/src/ntru/: mod.rs
crates/kem/src/rsa/: common.rs  mod.rs  rsa2048.rs  rsa4096.rs
crates/kem/src/saber/: mod.rs
crates/params/: Cargo.toml
crates/params/src/: lib.rs
crates/params/src/pqc/: dilithium.rs  falcon.rs  kyber.rs  mceliece.rs  mod.rs  (+4 more)
crates/params/tests/: constants_test.rs
crates/pke/: Cargo.toml
crates/pke/src/: error.rs  lib.rs
crates/sign/: Cargo.toml  signing_debug.txt
crates/sign/benches/: dilithium.rs
crates/sign/src/: error.rs  lib.rs
crates/symmetric/: Cargo.toml
crates/symmetric/src/: cipher.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: data_conversion.rs  lib.rs
dcrypt/: Cargo.toml
dcrypt-constants/: Cargo.toml
dcrypt-constants/src/: lib.rs
dcrypt-constants/src/pqc/: kyber.rs  ntru.rs
dcrypt-constants/src/traditional/: ecdh.rs  ecdsa.rs  mod.rs  rsa.rs
dcrypt-constants/src/utils/: mod.rs
dcrypt-constants/tests/: constants_test.rs
dcrypt-core/: Cargo.toml
dcrypt-core/src/: ec_common.rs  error.rs  lib.rs  mceliece_common.rs  ntru_common.rs  types.rs
dcrypt-core/src/error/: mod.rs  validate.rs
dcrypt-core/src/security/: memory.rs  mod.rs  secret.rs
dcrypt-core/src/traits/: kem.rs  mod.rs  serialize.rs  signature.rs  symmetric.rs
dcrypt-core/src/util/: constant_time.rs  error_helpers.rs  mod.rs  zeroing.rs
dcrypt-core/tests/: core_tests.rs
dcrypt-kem/: Cargo.toml
dcrypt-kem/src/: lib.rs
dcrypt-kem/src/dh/: mod.rs
dcrypt-kem/src/ecdh/: mod.rs
dcrypt-kem/src/error/: mod.rs  validate.rs
dcrypt-kem/src/kyber/: common.rs  kyber1024.rs  kyber512.rs  kyber768.rs  mod.rs
dcrypt-kem/src/mceliece/: mod.rs
dcrypt-kem/src/ntru/: mod.rs
dcrypt-kem/src/rsa/: common.rs  mod.rs  rsa2048.rs  rsa4096.rs
dcrypt-kem/src/saber/: mod.rs
dcrypt-primitives/: Cargo.toml  README.md
dcrypt-primitives/examples/: basic_usage.rs  no_std_usage.rs  primitives_basic_usage.rs  type_system.rs
dcrypt-primitives/src/: error.rs  lib.rs
dcrypt-primitives/src/aead/: mod.rs
dcrypt-primitives/src/block/: mod.rs
dcrypt-primitives/src/builders/: aead.rs  kdf.rs  mod.rs
dcrypt-primitives/src/error/: mod.rs  validate.rs
dcrypt-primitives/src/hash/: mod.rs
dcrypt-primitives/src/kdf/: common.rs  mod.rs  params.rs
dcrypt-primitives/src/mac/: mod.rs
dcrypt-primitives/src/operation/: aead.rs
dcrypt-primitives/src/operations/: aead.rs  kdf.rs
dcrypt-primitives/src/stream/: mod.rs
dcrypt-primitives/src/types/: algorithms.rs  digest.rs  key.rs  mod.rs  nonce.rs  salt.rs  sealed.rs  tag.rs
dcrypt-primitives/src/xof/: mod.rs
dcrypt-symmetric/: Cargo.toml
dcrypt-symmetric/src/: cipher.rs  error.rs  lib.rs
dcrypt-symmetric/src/aes/: keys.rs  mod.rs
dcrypt-symmetric/src/error/: mod.rs  validate.rs
dcrypt-symmetric/src/streaming/: chacha20poly1305.rs  gcm.rs
dcrypt-utils/: Cargo.toml
dcrypt/src/: kem.rs  lib.rs  sign.rs
tests/: Cargo.toml  cross_implementation_tests.rs  hybrid_tests.rs  kem_tests.rs  nist_test_vectors.rs  signature_tests.rs
tests/benches/: aes_bench.rs
tests/src/: lib.rs
tests/src/constant_time/: config.rs  mod.rs  tester.rs
tests/src/suites/: mod.rs
tests/src/vectors/: mod.rs
tests/tests/: acvp_tests.rs  constant_time_tests.rs  integration_tests.rs  property_aes_cbc.rs
tests/tests/constant_time/: aead_tests.rs  block_cipher_tests.rs  hash_tests.rs  mac_tests.rs  mod.rs  stream_tests.rs  xof_tests.rs
(+448 files in other folders)
