[workspace]
members = [
    "crates/api",
    "crates/common",
    "crates/internal",
    "crates/params",       
    "crates/algorithms", 
    "crates/symmetric",
    "crates/kem",
    "crates/sign",
    "crates/hybrid",
    "crates/pke",
    "crates/utils",        # dev-only, publish = false
    "tests"
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["DCRYPT Team <info@dcrypt.example.org>"]
description = "A pure Rust cryptographic library with traditional and post-quantum cryptographic algorithms"
repository  = "https://github.com/example/dcrypt"
license     = "Apache-2.0"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["cryptography", "post-quantum", "kem", "signatures"]

[workspace.dependencies]
rand        = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
zeroize     = { version = "1.8.1", features = ["zeroize_derive"] } # Synced with lock file
subtle      = { version = "2.6.1", default-features = false }
serde       = { version = "1.0.219", features = ["derive"] } # REMOVED optional = true
thiserror   = { version = "1.0.69" }                         # REMOVED optional = true
# If const-time was indeed used, add it back here without optional=true
# const-time  = { version = "0.1.1" }