[package]
name = "dcrypt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal crates (not published separately)
api = { path = "crates/api" }
common = { path = "crates/common" }
internal = { path = "crates/internal" }
params = { path = "crates/params" }
algorithms = { path = "crates/algorithms" }
symmetric = { path = "crates/symmetric" }
kem = { path = "crates/kem" }
sign = { path = "crates/sign" }
pke = { path = "crates/pke" }
hybrid = { path = "crates/hybrid" }

# Re-export workspace dependencies that users might need
rand = { workspace = true, optional = true }
zeroize = { workspace = true }
subtle = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["rand/std", "algorithms/std", "symmetric/std", "kem/std", "sign/std", "pke/std"]
alloc = ["algorithms/alloc", "symmetric/alloc", "kem/alloc", "sign/alloc", "pke/alloc"]
serde = ["dep:serde", "algorithms/serde", "symmetric/serde", "kem/serde", "sign/serde", "pke/serde"]
full = ["std", "alloc", "serde"]

# Your existing workspace configuration stays exactly the same
[workspace]
members = [
    "crates/api",
    "crates/common",
    "crates/internal",
    "crates/params",       
    "crates/algorithms", 
    "crates/symmetric",
    "crates/kem",
    "crates/sign",
    "crates/hybrid",
    "crates/pke",
    "crates/utils",
    "tests"
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Heath Ledger"]
description = "dcrypt is a pure Rust software-only cryptographic library for DePIN Network's Web4 infrastructure framework providing both traditional and post-quantum cryptography. Designed with emphasis on security, modularity, performance, and usability, dcrypt eliminates foreign function interfaces (FFI) ensuring memory safety and cross-platform compatibility."
repository  = "https://github.com/DePINNetwork/dcrypt"
license     = "Apache-2.0"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["cryptography", "post-quantum", "crypto"]

[workspace.dependencies]
rand        = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
zeroize     = { version = "1.8.1", features = ["zeroize_derive"] }
subtle      = { version = "2.6.1", default-features = false }
serde       = { version = "1.0.219", features = ["derive"] }
thiserror   = { version = "1.0.69" }

# Dev dependencies for tests
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"