[package]
name = "dcrypt-constants"
version = "0.1.0"
edition = "2021"
authors = ["DCRYPT Team <info@dcrypt.example.org>"]
description = "Constant values for DCRYPT library"
repository = "https://github.com/example/dcrypt"
license = "Apache-2.0"

# We don't need any features for a constants-only crate
# It's always no_std compatible