[package]
name = "dcrypt-symmetric"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Symmetric encryption algorithms for the DCRYPT library"
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["dcrypt-core/std"]
no_std = ["dcrypt-core/no_std"]
wasm = ["dcrypt-core/wasm"]
simd = ["dcrypt-core/simd"]
serde = ["dep:serde", "dcrypt-core/serde"]

[dependencies]
dcrypt-core = { path = "../dcrypt-core", version = "0.1.0" }
dcrypt-constants = { path = "../dcrypt-constants", version = "0.1.0" }
dcrypt-primitives = { path = "../dcrypt-primitives", version = "0.1.0" }
zeroize = { workspace = true }
serde = { workspace = true, optional = true }
base64 = "0.13"
hmac = "0.12"
pbkdf2 = "0.11"
sha2 = "0.10"
rand = { workspace = true }
hkdf = "0.12"  # Add this missing dependency
byteorder = "1.4"  # Make sure this is included 
subtle = "2.4"   # Make sure constant-time comparison is available
thiserror = "1.0"

[dev-dependencies]