[package]
name = "dcrypt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["std"]
std = [
    "dcrypt-core/std",
    "dcrypt-kem/std",
    "dcrypt-sign/std",
    "dcrypt-symmetric/std",
    "dcrypt-hybrid/std",
]
no_std = []
wasm = [
    "dcrypt-core/wasm",
    "dcrypt-kem/wasm",
    "dcrypt-sign/wasm",
    "dcrypt-symmetric/wasm",
    "dcrypt-hybrid/wasm",
]
simd = [
    "dcrypt-core/simd",
    "dcrypt-kem/simd",
    "dcrypt-sign/simd",
    "dcrypt-symmetric/simd",
]
serde = [
    "dep:serde",
    "dcrypt-core/serde",
    "dcrypt-kem/serde",
    "dcrypt-sign/serde",
    "dcrypt-symmetric/serde",
    "dcrypt-hybrid/serde",
]

[dependencies]
dcrypt-core = { path = "../dcrypt-core", version = "0.1.0" }
dcrypt-constants = { path = "../dcrypt-constants", version = "0.1.0" }
dcrypt-primitives = { path = "../dcrypt-primitives", version = "0.1.0" }
dcrypt-symmetric = { path = "../dcrypt-symmetric", version = "0.1.0" }
dcrypt-kem = { path = "../dcrypt-kem", version = "0.1.0" }
dcrypt-sign = { path = "../dcrypt-sign", version = "0.1.0" }
dcrypt-hybrid = { path = "../dcrypt-hybrid", version = "0.1.0" }
dcrypt-utils = { path = "../dcrypt-utils", version = "0.1.0" }
serde = { workspace = true, optional = true }
rand = { workspace = true }

[dev-dependencies]
dcrypt-test = { path = "../dcrypt-test", version = "0.1.0" }
