[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Testing utilities and benchmarks for the DCRYPT library"
repository.workspace = true
license.workspace = true

[dependencies]

kem = { path = "../crates/kem", version = "0.1.0" }
sign = { path = "../crates/sign", version = "0.1.0" }
algorithms = { path = "../crates/algorithms", version = "0.1.0"}
symmetric = { path = "../crates/symmetric", version = "0.1.0" }
hybrid = { path = "../crates/hybrid", version = "0.1.0" }
api = { path = "../crates/api", default-features = false }
common = { path = "../crates/common" , version = "0.1.0" }
internal = { path = "../crates/internal" , version = "0.1.0" }
rand = { workspace = true }
rand_chacha = { workspace = true }


statrs = "0.16"
