[package]
name = "dcrypt_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Testing utilities and benchmarks for the DCRYPT library"
repository.workspace = true
license.workspace = true

[dependencies]
dcrypt-kem = { path = "../crates/kem", version = "=0.9.0-beta.1" }
dcrypt-sign = { path = "../crates/sign", version = "=0.9.0-beta.1" }
dcrypt-algorithms = { path = "../crates/algorithms", version = "=0.9.0-beta.1"}
dcrypt-params = { path = "../crates/params", version = "=0.9.0-beta.1" }
dcrypt-symmetric = { path = "../crates/symmetric", version = "=0.9.0-beta.1" }
dcrypt-hybrid = { path = "../crates/hybrid", version = "=0.9.0-beta.1" }
dcrypt-api = { path = "../crates/api", default-features = false }
dcrypt-common = { path = "../crates/common" , version = "=0.9.0-beta.1" }
dcrypt-internal = { path = "../crates/internal" , version = "=0.9.0-beta.1" }
rand = { workspace = true }
rand_chacha = { workspace = true }
statrs = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
once_cell = "1"
hex = "0.4"
thiserror = "1"
arrayref = "0.3"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[[bench]]
name = "aes_bench"
harness = false

[package.metadata.release]
publish = true