[package]
name = "hybrid"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hybrid cryptography schemes for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = false 

[features]
default = ["std"]
std = [
    "api/std", 
    "common/std", 
    "internal/std"
]
no_std = [
    "api/no_std", 
    "common/no_std", 
    "internal/no_std"
]
serde = [
    "dep:serde", 
    "api/serde", 
    "common/serde"
]


[dependencies]
api = { path = "../api", version = "0.1.0", default-features = false }
common = { path = "../common", version = "0.1.0", default-features = false }
internal = { path = "../internal", version = "0.1.0", default-features = false }
params = { path = "../params", version = "0.1.0" }
algorithms = { path = "../algorithms", version = "0.1.0" }
kem = { path = "../kem", version = "0.1.0" }
sign = { path = "../sign", version = "0.1.0" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha = { workspace = true }
