[package]
name = "dcrypt-hybrid"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hybrid cryptography schemes for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std"
]
no_std = [
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std"
]
serde = [
    "dep:serde", 
    "dcrypt-api/serde", 
    "dcrypt-common/serde"
]


[dependencies]
dcrypt-api = { path = "../api", version = "=0.9.0-beta.1", default-features = false }
dcrypt-common = { path = "../common", version = "=0.9.0-beta.1", default-features = false }
dcrypt-internal = { path = "../internal", version = "=0.9.0-beta.1", default-features = false }
dcrypt-params = { path = "../params", version = "=0.9.0-beta.1" }
dcrypt-algorithms = { path = "../algorithms", version = "=0.9.0-beta.1" }
dcrypt-kem = { path = "../kem", version = "=0.9.0-beta.1" }
dcrypt-sign = { path = "../sign", version = "=0.9.0-beta.1" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha = { workspace = true }
