[package]
name = "internal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Internal utilities for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = false 

[features]
default = ["std"]
std = ["thiserror", "zeroize/std", "alloc"]
alloc = []
no_std = []
simd = []

[dependencies]
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
thiserror = { version = "1.0.37", optional = true }
subtle = { version = "2.4.1" }

[dev-dependencies]
rand = { version = "0.8.5" }