[package]
name = "kem"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Key Encapsulation Mechanisms for the DCRYPT library"
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = [
    "api/std", 
    "common/std", 
    "internal/std",
    "alloc"
]
no_std = [
    "api/no_std", 
    "common/no_std", 
    "internal/no_std",
    "alloc"
]
alloc = []
serde = [
    "dep:serde", 
    "api/serde", 
    "common/serde"
]

[dependencies]
api = { path = "../api", version = "0.1.0", default-features = false }
common = { path = "../common", version = "0.1.0", default-features = false }
internal = { path = "../internal", version = "0.1.0", default-features = false }
params = { path = "../params", version = "0.1.0" }
algorithms = { path = "../algorithms", version = "0.1.0" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
subtle = { version = "2.6.1", default-features = false }

[dev-dependencies]
rand_chacha = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kyber"
harness = false

[[bench]]
name = "ecdh_p192"
harness = false

[[bench]]
name = "ecdh_p224"
harness = false

[[bench]]
name = "ecdh_p256"
harness = false

[[bench]]
name = "ecdh_p384"
harness = false

[[bench]]
name = "ecdh_p521"
harness = false

[[bench]]
name = "ecdh_k256"
harness = false

[[bench]]
name = "ecdh_b283k"
harness = false

[[bench]]
name = "ecdh_comparison"
harness = false