[package]
name = "sign"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Digital Signature Schemes for the DCRYPT library"
repository.workspace = true
license.workspace = true

[features]
trace = []
default = ["std"]
std = [
    "api/std", 
    "common/std", 
    "internal/std"
]
no_std = [
    "api/no_std", 
    "common/no_std", 
    "internal/no_std"
]
serde = [
    "dep:serde", 
    "api/serde", 
    "common/serde"
]

[dependencies]
api = { path = "../api", version = "0.1.0", default-features = false }
common = { path = "../common", version = "0.1.0", default-features = false }
internal = { path = "../internal", version = "0.1.0", default-features = false }
params = { path = "../params", version = "0.1.0" }
algorithms = { path = "../algorithms", version = "0.1.0" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
subtle = "2.5"

[dev-dependencies]
rand_chacha = { workspace = true }
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dilithium"
harness = false