[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Utilities and helpers for the DCRYPT library"
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = [
    "api/std", 
    "common/std", 
    "internal/std"
]
no_std = ["alloc",  # no_std typically needs alloc for Vec, String, etc.
    "api/no_std", 
    "common/no_std", 
    "internal/no_std"
]
alloc = []  # Feature for allocation support in no_std environments

[dependencies]
api = { path = "../api" }
common = { path = "../common" }
internal = { path = "../internal" }
zeroize = { workspace = true }
rand = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1" 