[package]
name = "dcrypt-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Utilities and helpers for the DCRYPT library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std"
]
no_std = ["alloc",  # no_std typically needs alloc for Vec, String, etc.
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std"
]
alloc = []  # Feature for allocation support in no_std environments

[dependencies]
dcrypt-api = { path = "../api" }
dcrypt-common = { path = "../common" }
dcrypt-internal = { path = "../internal" }
zeroize = { workspace = true }
rand = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1" 